# aiogram_sqlite_storage

./: .gitignore  README.md  pyproject.toml  setup.py
aiogram_sqlite_storage/: sqlitestore.py
tests/: test.py
