[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aiogram_sqlite_storage"
version = "0.2.1"
authors = [
  { name="Aleksandr Zheleznov" },
]
description = "A FSM Storage for aiogram 3.0+, based on SQLite and picle."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/sashaferrum/aiogram_sqlite_storage"